# web-terminal-rs

./: Cargo.toml
src/: lib.rs
tests/: e2e.rs
